--- a/pages/cwb-heess.html
+++ b/pages/cwb-heess.html
@@ -87,6 +87,11 @@
 
 	<strong>Description:</strong> A wearable battery using a supercapacitor-based hybrid power system that can provide ~1kW in 5 seconds
 
+	<br>
+
+	<strong>Poster:</strong> <a href="https://www.dropbox.com/scl/fi/unyqsobl6t9jusa9z1nhy/2021DACYFPoster.pdf?rlkey=rb84p8r9mmax59b5jw0qpudtx&dl=1">An Optimal Control Scheme for Hybrid Power System
+with Synchronous Buck Converter, DAC Young Fellow 2021</a>
+
 	<!-- ----------------------------------------------------------- -->
 	<p><hr style="border: 1px; border-top: none; margin-bottom: 5px;"></p>
 
@@ -177,7 +182,10 @@
 		</div>
 	</div> -->
 
-	<a href="https://www.dropbox.com/scl/fi/unyqsobl6t9jusa9z1nhy/2021DACYFPoster.pdf?rlkey=rb84p8r9mmax59b5jw0qpudtx&dl=1">Poster of the CWB System at DAC 2021</a>
+
+	<br>
+
+	<br>
 
 	<br>
 
