--- a/pages/cwb-heess.html
+++ b/pages/cwb-heess.html
@@ -81,7 +81,7 @@
 
 	<br>
 
-	<strong>Type:</strong> A joint project with University of Southern California and ADAtech (US), Phase II STTR NSF
+	<strong>Type:</strong> A joint project with ADA Technologies, Inc., USA, Phase II STTR NSF
 
 	<br>
 
