--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 									ACM MobiCom 2023, acceptance rate 24%
 									<br/>
 									<a class="button small alt" href="https://dl.acm.org/doi/10.1145/3570361.3613262">Publisher</a>
-									<a class="button small alt" href="https://www.dropbox.com/scl/fi/u3yf3z5c5z2ogj0otzvlh/MobiCom23.pdf">PDF</a>
+									<a class="button small alt" href="https://www.dropbox.com/scl/fi/u3yf3z5c5z2ogj0otzvlh/MobiCom23.pdf?rlkey=tadvmqk7tgmmq2fmtlvgmvt2s&st=52aft6n7&dl=1">PDF</a>
 									<a class="button small alt" href="https://www.dropbox.com/scl/fo/f5gdgto2hhve1o1640eoi/AP4o-ZFN95jpjE65LvuLLLc?rlkey=qdwfuu2wbnz1fyqw66nadlu9f&dl=0">Slides</a>
 									<a class="button small alt" href="https://www.dropbox.com/scl/fo/f5gdgto2hhve1o1640eoi/AP4o-ZFN95jpjE65LvuLLLc?rlkey=qdwfuu2wbnz1fyqw66nadlu9f&dl=0">Poster</a>
 								</article>
