--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
 								<div class="col-4 col-6-medium col-12-small">
 									<section class="box">
-										<a class="image featured"><img style="padding: 10px 10px 0px 10px;" src="files/images/mmcows.png" alt="" /></a>
+										<a class="image featured"><img style="padding: 10px 10px 0px 10px;" src="files/images/MmCows_thumbnail.png" alt="" /></a>
 										<header>
 											<h3>Multimodal Sensing and Deep Learning Framework for Dairy Cattle Monitoring</p>
 										</header>
