--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
 								<div class="col-4 col-6-medium col-12-small">
 									<section class="box">
-										<a class="image featured"><img style="padding: 10px 10px 0px 10px;" src="files/images/cwb.jpg" alt="" /></a>
+										<a class="image featured"><img style="padding: 10px 10px 0px 10px;" src="files/images/cwb.png" alt="" /></a>
 										<header>
 											<h3>Conformal Wearable Battery – HEESS</p>
 										</header>
