--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
 									<a class="button small alt" href="https://www.dropbox.com/scl/fi/v6la2ydf9biwo1w7e76ck/MmCows_dataset.pdf?rlkey=ay6d407gtlgrjuit8cy4yiatv&st=zfhsxdw7&dl=1">PDF main</a>
 									<a class="button small alt" href="https://www.dropbox.com/scl/fi/86fx179015w424iy36ehj/MmCows_supplementary.pdf?rlkey=79z3ykysdqgm76xk8qbhezvte&st=mymy14cp&dl=1">PDF sub</a>
 									<a class="button small alt" href="https://www.dropbox.com/scl/fi/g466wu7mhuygx9ybh5nr9/MmCows_poster.pdf?rlkey=vqf6qt4md3xd86frsl70i08h9&st=g1z36kzr&dl=1">Poster</a>
+									<a class="button small alt" href="files/misc/MmCows_slides.pdf">Slides</a>
 								</article>
 							</div>
 							</br>
