--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 								<article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork">
 									<h3 class="archive__item-title" itemprop="headline" style="text-decoration:none; margin-bottom:-5px;">MmCows: A Multimodal Dataset for Dairy Cattle Monitoring</h3>
 									<p><u>Hien Vu</u>, Omkar Prabhune, Unmesh Raskar, Dimuth Panditharatne, Hanwook Chung, Christopher Choi, and Younghyun Kim</br>
-									NeurIPS 2024, spotlight paper, top 5% ratings, acceptance rate 25.3%
+									NeurIPS 2024, spotlight paper, acceptance rate 25.3%
 									<br/>
 									<a class="button small alt" href="https://engineering.purdue.edu/neis/research/projects/mmcows.html">Website</a>
 									<a class="button small alt" href="https://neurips.cc/virtual/2024/poster/97651">Publisher</a>
