--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 									NeurIPS 2024, spotlight paper, acceptance rate 25.3%
 									<br/>
 									<a class="button small alt" href="https://engineering.purdue.edu/neis/research/projects/mmcows.html">Website</a>
-									<a class="button small alt" href="https://neurips.cc/virtual/2024/poster/97651">Publisher</a>
+									<a class="button small alt" href="https://openreview.net/forum?id=X4nq0W2qZX">Publisher</a>
 									<a class="button small alt" href="https://www.dropbox.com/scl/fi/v6la2ydf9biwo1w7e76ck/MmCows_dataset.pdf?rlkey=ay6d407gtlgrjuit8cy4yiatv&st=zfhsxdw7&dl=1">PDF main</a>
 									<a class="button small alt" href="https://www.dropbox.com/scl/fi/86fx179015w424iy36ehj/MmCows_supplementary.pdf?rlkey=79z3ykysdqgm76xk8qbhezvte&st=mymy14cp&dl=1">PDF sub</a>
 									<a class="button small alt" href="https://www.dropbox.com/scl/fi/g466wu7mhuygx9ybh5nr9/MmCows_poster.pdf?rlkey=vqf6qt4md3xd86frsl70i08h9&st=g1z36kzr&dl=1">Poster</a>
