--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 									My research focuses on low-power wireless sensing techniques to advance precision agriculture. Specifically, I am interested in wireless sensor networks that utilize hardware and software optimization techniques to enhance sensing, in-device computation, and communication efficiency for developing practical cyber-physical systems. </br> </br>
  
-									For your reference, here are my <a href="files/Resume_Hien_Vu_ind.pdf">resume</a> and <a href="files/CV_Hien_Vu_aca.pdf">CV</a>.
+									For your reference, here are my <a href="files/Resume_Hien_Vu.pdf">resume</a> and <a href="files/CV_Hien_Vu.pdf">CV</a>.
 								</p>
 
 								<ul class="social">
