--- a/pages/visual-slam.html
+++ b/pages/visual-slam.html
@@ -114,7 +114,8 @@
 
 	<h2>Demo</h2>
 	<div style="display: flex; justify-content: center;">
-	<iframe width="800" height="500" src="https://www.youtube.com/embed/kWhskVpxc-k?si=6OY9vecSKLB-B1u1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	<!-- <iframe width="800" height="500" src="https://www.youtube.com/embed/kWhskVpxc-k?si=6OY9vecSKLB-B1u1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/FiivFT2d-Vk?si=uqnNpBORM9B1cVKd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 	</div>
 
 	<br>
