--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
 										</p>
 										<footer>
 											<ul class="actions">
-												<li><a href="https://www.dropbox.com/scl/fi/u3yf3z5c5z2ogj0otzvlh/MobiCom23.pdf?rlkey=tadvmqk7tgmmq2fmtlvgmvt2s&dl=1" class="button alt">Find out more</a></li>
+												<!-- <li><a href="https://www.dropbox.com/scl/fi/u3yf3z5c5z2ogj0otzvlh/MobiCom23.pdf?rlkey=tadvmqk7tgmmq2fmtlvgmvt2s&dl=1" class="button alt">Find out more</a></li> -->
+												<li><a href="https://dl.acm.org/doi/10.1145/3570361.3613262" class="button alt">Find out more</a></li>
 											</ul>
 										</footer>
 									</section>
