--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 									<!-- <p>Lorem ipsum dolor sit amet feugiat</p> -->
 								</header>
 								<hvt>
-									Hi, my name is Hien and I am a PhD student at Purdue University, West Lafayette, IN. My research focuses on low-power wireless sensing techniques to advance precision agriculture. Specifically, I am interested in wireless sensor networks that utilize hardware and software optimization techniques to enhance sensing, in-device computation, and communication efficiency for developing practical cyber-physical systems. For your reference, here are my <a href="files/Resume_Hien_Vu.pdf">resume</a> and <a href="files/CV_Hien_Vu.pdf">CV</a>.
+									Hi, I am a PhD student at Purdue University in West Lafayette, Indiana. My research focuses on low-power wireless sensing techniques to advance precision agriculture. Specifically, I am interested in wireless sensor networks that utilize hardware and software optimization techniques to enhance sensing, in-device computation, and communication efficiency for developing practical cyber-physical systems. For your reference, here are my <a href="files/Resume_Hien_Vu.pdf">resume</a> and <a href="files/CV_Hien_Vu.pdf">CV</a>.
 								</p>
 
 								<ul class="social">
