--- a/index.html
+++ b/index.html
@@ -52,44 +52,15 @@
 					<li><a href="#bio">About me</a></li>
 					<li><a href="#projects">Projects</a></li>
 					<li><a href="#publications">Publications</a></li>
-					<!-- <li><a href="#mentoring">Mentoring</a></li> -->
 					<li><a href="#contact">Contact</a></li>
-					<!-- <li><a href="#bio">Work Experience</a></li> -->
-					<!-- <li><a href="#bio">Patents</a></li> -->
-					<!-- <li>
-									<a href="#">Dropdown</a>
-									<ul>
-										<li><a href="#bio">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
-											<a href="#">Phasellus consequat</a>
-											<ul>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-												<li><a href="#">Nisl sed aliquam</a></li>
-												<li><a href="#">Dolore adipiscing</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
-									</ul>
-								</li> -->
-					<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li> -->
 				</ul>
 			</nav>
 
-			<!-- Banner -->
-			<!-- <section id="banner">
-				<header>
-					<h2>Ciao! This is Alessandro's page.</h2>
-					<p>Senior Research Scientist, Nokia Bell Labs</p>
-				</header>
-			</section> -->
 
 			<!-- Intro -->
+			<!-- Link for icons -->
+			<!-- https://fontawesome.com/icons/battery-half?s=solid -->
+			<!-- content: icon solid featured + color "alt" + icon_code + size "fa-xs"-->
 			<section id="intro" class="container">
 				<div class="row">
 					<div class="col-4 col-12-medium">
@@ -98,16 +69,22 @@
 							<header>
 								<h2>Wireless Sensing</h2>
 							</header>
-							<!-- <p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p> -->
 						</section>
 					</div>
-					<div class="col-4 col-12-medium">
+					<!-- <div class="col-4 col-12-medium">
 						<section class="middle">
 							<i class="icon solid featured alt fa-battery-half fa-xs"></i>
 							<header>
 								<h2>Low-Power Systems</h2>
 							</header>
-							<!-- <p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p> -->
+						</section>
+					</div> -->
+					<div class="col-4 col-12-medium">
+						<section class="middle">
+							<i class="icon solid featured alt fa-brain fa-xs"></i>
+							<header>
+								<h2>Machine Learning</h2>
+							</header>
 						</section>
 					</div>
 					<div class="col-4 col-12-medium">
@@ -116,16 +93,9 @@
 							<header>
 								<h2>Embedded Computing</h2>
 							</header>
-							<!-- <p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p> -->
 						</section>
 					</div>
 				</div>
-				<!-- <footer>
-								<ul class="actions">
-									<li><a href="#" class="button large">Get Started</a></li>
-									<li><a href="#" class="button alt large">Learn More</a></li>
-								</ul>
-							</footer> -->
 			</section>
 
 		</section>
@@ -301,19 +271,6 @@
 					</header>
 		
 					<section>
-						<!-- <header>
-							<h3>Selected Peer-reviewed Publications</h3>
-						</header> -->
-						<!-- <p> -->
-							<!-- HV: Default format -->
-							<!-- <ul class="no-bullets">
-								<li><b>Paper name</b></br>
-									<u>Hien Vu</u>, Hanwook Chung, Christopher Choi, and Younghyun Kim </br>
-									Conference</br>
-									<a class="button small alt" href="https://link">Publisher</a>
-									<a class="button small alt" href="papers/link">PDF</a>
-								</li>
-							</ul> -->
 							<strong>
 							<div class="list__item">
 								<article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork">
