--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 			<!-- Logo -->
 			<h1><a href="index.html">Hien Vu</a></h1>
-			<h3>Research Assistant at Purdue University</h3>
+			<h3>PhD Student at Purdue University</h3>
 
 			<!-- Nav -->
 			<nav id="nav">
