--- a/index.html
+++ b/index.html
@@ -272,6 +272,18 @@
 		
 					<section>
 							<strong>
+
+							<div class="list__item">
+								<article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork">
+									<h3 class="archive__item-title" itemprop="headline" style="text-decoration:none; margin-bottom:-5px;">MooBot: RAG-based Video Querying System for Dairy Cattle Behavior and Health Insights</h3>
+									<p>Unmesh Raskar, Omkar Prabhune, <u>Hien Vu</u>, and Younghyun Kim</br>
+									CVPR Workshop 2025
+									<br/>
+									<a class="button small alt" href="https://par.nsf.gov/biblio/10612104-moobot-rag-based-video-querying-system-dairy-cattle-behavior-health-insights">Publisher</a>
+								</article>
+							</div>
+							</br>
+
 							<div class="list__item">
 								<article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork">
 									<h3 class="archive__item-title" itemprop="headline" style="text-decoration:none; margin-bottom:-5px;">MmCows: A Multimodal Dataset for Dairy Cattle Monitoring</h3>
