--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 									<!-- <p>Lorem ipsum dolor sit amet feugiat</p> -->
 								</header>
 								<hvt>
-									My research focuses on low-power wireless sensing techniques to advance precision agriculture. Specifically, I am interested in wireless sensor networks that utilize hardware and software optimization techniques to enhance sensing, in-device computation, and communication efficiency for developing practical cyber-physical systems.
+									Welcome to my page! My name is Hien and my research focuses on low-power wireless sensing techniques to advance precision agriculture. Specifically, I am interested in wireless sensor networks that utilize hardware and software optimization techniques to enhance sensing, in-device computation, and communication efficiency for developing practical cyber-physical systems.
 									<!-- here are my <a href="files/Resume_Hien_Vu.pdf">resume</a> and <a href="files/CV_Hien_Vu.pdf">CV</a>. -->
 								</p>
 
