--- a/index.html
+++ b/index.html
@@ -393,36 +393,17 @@
 
 				</article>
 
-			<!-- 	<article class="box post" id="mentoring">
+				<article class="box post" id="mentoring">
 					<header>
-						<h2>Mentoring</h2>
+						<h2>Professonal Services</h2>
 					</header>
 
-					<p>
-						Text
-						</br>
-						Text:
-						</p>
-
-					<section>
-							<header>
-								<h3>Text</h3>
-							</header>
-						<ul>
-							<li> Item 1 </li>
+						<ul> <strong>
+							<li> Web co-chair for ISLPED 2026 (IEEE/ACM International Symposium on Low Power Electronics and Design) </li>
+							<li> Reviewer for NeurIPS 2025 (The Conference on Neural Information Processing System)</li>
 						</ul>
-					</section>
-
-					<section>
-						<header>
-							<h3>Text</h3>
-						</header>
-					<ul>
-					<li>Item 1
-					</li>
-				</ul>
 				</section>
- -->
+
 						
 					
 	
