--- a/index.html
+++ b/index.html
@@ -401,12 +401,17 @@
 						<ul> <strong>
 							<li> Web co-chair for ISLPED 2026 (IEEE/ACM International Symposium on Low Power Electronics and Design) </li>
 							<li> Reviewer for NeurIPS 2025 (The Conference on Neural Information Processing System)</li>
-						</ul>
-				</section>
+						</ul>	
+				</article>
 
-						
-					
-	
+				<article class="box post" id="mentoring">
+					<header>
+						<h2>Documents</h2>
+					</header>
+
+						<ul> <strong>
+							<li> My CV can be found here [<a href="files/CV_Hien_Vu.pdf">CV_Hien_Vu</a>].</li>
+						</ul>	
 				</article>
 
 			</div>
