--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 								</header>
 								<hvt>
 									Welcome to my page! My name is Hien and my research focuses on low-power wireless sensing techniques to advance precision agriculture. Specifically, I am interested in wireless sensor networks that utilize hardware and software optimization techniques to enhance sensing, in-device computation, and communication efficiency for developing practical cyber-physical systems.
-									<!-- here are my <a href="files/Resume_Hien_Vu.pdf">resume</a> and <a href="files/CV_Hien_Vu.pdf">CV</a>. -->
+									<!-- here are my <a href="files/Resume_HienVu.pdf">resume</a> and <a href="files/CV_HienVu.pdf">CV</a>. -->
 								</p>
 
 								<ul class="social">
@@ -410,7 +410,7 @@
 					</header>
 
 						<ul> <strong>
-							<li> My CV can be found here [<a href="files/CV_Hien_Vu.pdf">CV_Hien_Vu</a>].</li>
+							<li> My CV can be found here [<a href="files/CV_HienVu.pdf">CV_HienVu</a>].</li>
 						</ul>	
 				</article>
 
